2018-07-07  Matthew Martin  <phy1729@gmail.com>

	* 43106: Completion/BSD/Command/_ldap: Add ldap completer.

	* 43046: Completion/Unix/Type/_pdf, Completion/X/Command/_mupdf:
	Add mupdf completer.

	* 42995: David Klann: Completion/Linux/Command/_networkmanager:
	Only complete active connections for nmcli connection down.

2018-07-03  dana  <dana@dana.is>

	* 43105 (tweaked): Completion/Unix/Command/_pgrep: Add full procps
	support, other improvements

2018-07-03  Peter Stephenson  <p.stephenson@samsung.com>

	* dana: 43134: Completion/Unix/Type/_signals: don't complete SIG
	in front of numeric signals.

2018-07-02  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 43108, 43121: Completion/Unix/Command/_killall: complete
	various options

2018-07-01  Doron Behar  <doron.behar@gmail.com>

	* 43059: Completion/Unix/Command/_gpg: Use explicit UIDs for
	state = public keys.

2018-07-01  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 43107: Completion/Unix/Type/_ttys, Completion/Unix/Command/_ps,
	Completion/BSD/Command/_watch-snoop: add an option to _ttys to
	complete only open ttys, and use it in _ps and _watch-snoop.

2018-06-29  Peter Stephenson  <p.stephenson@samsung.com>

	* users/23519: README, Completion/Unix/Type/_remote_files: Use tag
	remote-files instead of files for remote files.

2018-06-27  Daniel Hahler  <zsh@thequod.de>

	* 42746: Completion/Unix/Command/_vim: _vim: handle special values for
	-u/-U.

2018-06-27  Eric Cook  <llua@gmx.com>

	* 43096: Eitan: Completion/Unix/Command/_vim, remove duplicate flag

2018-06-25  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 43091: Src/glob.c: In the (u) glob qualifier, expand and
	correct "unknown user" error messages.

2018-06-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 43084: Doc/Zsh/zle.yo, Functions/Chpwd/zsh_directory_name_cdr,
	Src/Zle/zle_main.c: vared -g suppresses variable creation and
	override warnings; also suppress in function.
